Replace deprecated constructors
Signed-off-by: Stefan Weil <sw@weilnetz.de>