@@ -121,17 +121,17 @@ public class JSONParser {
 					switch(token.type){
 					case Yytoken.TYPE_VALUE:
 						status=S_IN_FINISHED_VALUE;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(token.value);
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(createObjectContainer(containerFactory));
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(createArrayContainer(containerFactory));
 						break;
 					default:
@@ -154,7 +154,7 @@ public class JSONParser {
 							String key=(String)token.value;
 							valueStack.addFirst(key);
 							status=S_PASSED_PAIR_KEY;
-							statusStack.addFirst(new Integer(status));
+							statusStack.addFirst(Integer.valueOf(status));
 						}
 						else{
 							status=S_IN_ERROR;
@@ -194,7 +194,7 @@ public class JSONParser {
 						List newArray=createArrayContainer(containerFactory);
 						parent.put(key,newArray);
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newArray);
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
@@ -204,7 +204,7 @@ public class JSONParser {
 						Map newObject=createObjectContainer(containerFactory);
 						parent.put(key,newObject);
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newObject);
 						break;
 					default:
@@ -235,7 +235,7 @@ public class JSONParser {
 						Map newObject=createObjectContainer(containerFactory);
 						val.add(newObject);
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newObject);
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
@@ -243,7 +243,7 @@ public class JSONParser {
 						List newArray=createArrayContainer(containerFactory);
 						val.add(newArray);
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						valueStack.addFirst(newArray);
 						break;
 					default:
@@ -350,19 +350,19 @@ public class JSONParser {
 					switch(token.type){
 					case Yytoken.TYPE_VALUE:
 						status=S_IN_FINISHED_VALUE;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.primitive(token.value))
 							return;
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startObject())
 							return;
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startArray())
 							return;
 						break;
@@ -392,7 +392,7 @@ public class JSONParser {
 						if(token.value instanceof String){
 							String key=(String)token.value;
 							status=S_PASSED_PAIR_KEY;
-							statusStack.addFirst(new Integer(status));
+							statusStack.addFirst(Integer.valueOf(status));
 							if(!contentHandler.startObjectEntry(key))
 								return;
 						}
@@ -432,17 +432,17 @@ public class JSONParser {
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
 						statusStack.removeFirst();
-						statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+						statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startArray())
 							return;
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
 						statusStack.removeFirst();
-						statusStack.addFirst(new Integer(S_IN_PAIR_VALUE));
+						statusStack.addFirst(Integer.valueOf(S_IN_PAIR_VALUE));
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startObject())
 							return;
 						break;
@@ -484,13 +484,13 @@ public class JSONParser {
 						break;
 					case Yytoken.TYPE_LEFT_BRACE:
 						status=S_IN_OBJECT;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startObject())
 							return;
 						break;
 					case Yytoken.TYPE_LEFT_SQUARE:
 						status=S_IN_ARRAY;
-						statusStack.addFirst(new Integer(status));
+						statusStack.addFirst(Integer.valueOf(status));
 						if(!contentHandler.startArray())
 							return;
 						break;
