@@ -265,7 +265,7 @@ public class JSONArrayTest extends TestCase {
 		assertEquals("null", JSONArray.toJSONString((Object[])null));
 		assertEquals("[]", JSONArray.toJSONString(new Object[0]));
 		assertEquals("[\"Hello\"]", JSONArray.toJSONString(new Object[] { "Hello" }));
-		assertEquals("[\"Hello\",12,[1,2,3]]", JSONArray.toJSONString(new Object[] { "Hello", new Integer(12), new int[] { 1, 2, 3 } }));
+		assertEquals("[\"Hello\",12,[1,2,3]]", JSONArray.toJSONString(new Object[] { "Hello", Integer.valueOf(12), new int[] { 1, 2, 3 } }));
 		
 		StringWriter writer;
 		
@@ -282,7 +282,7 @@ public class JSONArrayTest extends TestCase {
 		assertEquals("[\"Hello\"]", writer.toString());
 		
 		writer = new StringWriter();
-		JSONArray.writeJSONString(new Object[] { "Hello", new Integer(12), new int[] { 1, 2, 3} }, writer);
+		JSONArray.writeJSONString(new Object[] { "Hello", Integer.valueOf(12), new int[] { 1, 2, 3} }, writer);
 		assertEquals("[\"Hello\",12,[1,2,3]]", writer.toString());
 	}
 }
